// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and resolve request for accreditations 1`] = `
<div
  id="popup-greyer"
  onClick={[Function]}
>
  <div
    id="user-details-popover"
  >
    <div
      id="popup-box"
      onClick={[Function]}
    >
      <div
        className="popup-box-header"
      >
        <h2>
          Professional Accreditations
        </h2>
        <input
          className="close-button"
          id="close-button"
          onClick={[Function]}
          type="submit"
          value="Close"
        />
      </div>
      <div
        className="accreditation-list-container"
      >
        <div
          className="accreditation-list"
        >
          <Connect(UserAccreditationTile)
            accreditation={
              Object {
                "accreditationID": "constructionBasics",
                "accreditationName": "Construction Basics 101",
                "issuedDate": "2019-10-01T12:59:12.142216",
                "issuer": "did:fctr:d85be1f5baa83fa83850d8b58731a7f7c8ba65c33dec107c2e16e0dd65c7bcc7",
                "revocationDate": "2019-11-01T12:59:12.142216",
                "revocationReason": "expired",
                "status": "revoked",
                "subject": "did:fnds:31a24b270fe86d9c595e715854028c319cc75957718861eb66996929eb5c8025",
              }
            }
            key="0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with no accreditations 1`] = `
<div
  id="popup-greyer"
  onClick={[Function]}
>
  <div
    id="user-details-popover"
  >
    <div
      id="popup-box"
      onClick={[Function]}
    >
      <div
        className="popup-box-header"
      >
        <h2>
          Professional Accreditations
        </h2>
        <input
          className="close-button"
          id="close-button"
          onClick={[Function]}
          type="submit"
          value="Close"
        />
      </div>
      <div
        className="accreditation-list-container"
      >
        <div
          className="accreditation-list"
        >
          <NoAccreditationsAvailable />
        </div>
      </div>
    </div>
  </div>
</div>
`;
